--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
-<app-nav-bar name="Professor Page"></app-nav-bar>
-
-<body>
-  <app-card-layout [list]="courseList"></app-card-layout>
-</body>
+<router-outlet></router-outlet>
