--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,8 +1,11 @@
-<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-<div class="navBar" style="background-color: #D22030;">
-    <button class="material-icons navButton" title="User">perm_identity</button>
-    <button class="material-icons navButton" title="Messages">mail_outline</button>
+<div class="navBar">
+    <button class="material-icons navButton" title="User Settings" [matMenuTriggerFor]="menu">perm_identity</button>
+    <button class="material-icons navButton" title="Courses">list</button>
     <h1>{{name}}</h1>
-    <button class="material-icons navButton" title="Map">my_location</button>
-    <button class="material-icons navButton" title="Menu">menu</button>
+    <button class="material-icons navButton" title="Location">my_location</button>
+    <button class="material-icons navButton" title="Messages">mail_outline</button>
+
+    <mat-menu #menu="matMenu" class="menu">
+        <app-user-menu></app-user-menu>
+    </mat-menu>
 </div>
