--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -1,18 +1,19 @@
-.navBar{
-    width: 100%;
-    border-radius: 5px;
-    display: grid;
-    grid-template-columns: auto auto auto auto auto;
-    background-color: var(--csun-red);
-}
-.navButton{
+.navButton {
     margin: auto;
     background: none;
     border: 0;
     width: min-content;
     color: #FFFFFF;
 }
-.menu{
+
+.menu {
     position: relative;
     display: inline-block;
+}
+
+h1 {
+    font-family: futura-pt, sans-serif;
+    font-weight: 700;
+    font-size: 1.5em;
+    letter-spacing: 5px;
 }
