--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,9 @@ html * {
     --azure: #2CA5DA;
     --iris: #5B4C93;
     --periwinkle: #92A1CD;
+    --green: #47B361;
+    --blue: #086B9E;
+    --dark-red: #850711;
 }
 
 h1 {
