--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,9 +1,17 @@
 <mat-toolbar style="background-color:var(--csun-red);color: #FFFFFF; border-radius: 5px;">
-        <button class="material-icons navButton" title="User Settings" [matMenuTriggerFor]="menu">perm_identity</button>
-        <button class="material-icons navButton" title="Courses" routerLink="/profMain">grid_on</button>
-        <h1>{{name}}</h1>
-        <button class="material-icons navButton" title="Location">my_location</button>
-        <button class="material-icons navButton" title="Messages" routerLink="/profMessages">mail_outline</button>
+    <button mat-button class="navButton" title="User Settings" [matMenuTriggerFor]="menu">
+        <mat-icon>perm_identity</mat-icon>
+    </button>
+    <button mat-button class="navButton" title="Courses" routerLink="/profMain">
+        <mat-icon>grid_on</mat-icon>
+    </button>
+    <h1>{{name}}</h1>
+    <button mat-button class="navButton" title="Location">
+        <mat-icon>my_location</mat-icon>
+    </button>
+    <button mat-button class="navButton" title="Messages" routerLink="/profMessages">
+        <mat-icon>mail_outline</mat-icon>
+    </button>
 </mat-toolbar>
 
 <div class="userMenu">
