changes icons and colors in messages
icons correspond to a warning and an announcement.

--- a/src/app/absent-message/absent-message.component.css
+++ b/src/app/absent-message/absent-message.component.css
@@ -38,7 +38,7 @@
 
 .absentMessage {
     color: #FFFFFF;
-    background-color: var(--golden-yellow);
+    background-color: var(--csun-red);
 }
 
 mat-card {
