--- a/src/app/exam-message/exam-message.component.css
+++ b/src/app/exam-message/exam-message.component.css
@@ -32,7 +32,7 @@
 }
 .examMessage{
     color: #FFFFFF;
-    background-color: var(--csun-red);
+    background-color: var(--golden-yellow);
 }
 mat-card{
     background-color: #FFFFFF;
