updates rb.readme, save icon, and message color
blue is now the color for announcement messages.

--- a/src/app/exam-message/exam-message.component.css
+++ b/src/app/exam-message/exam-message.component.css
@@ -32,7 +32,7 @@
 }
 .examMessage{
     color: #FFFFFF;
-    background-color: var(--golden-yellow);
+    background-color: var(--blue);
 }
 mat-card{
     background-color: #FFFFFF;
