--- a/src/app/professor-settings-page/professor-settings-page.component.html
+++ b/src/app/professor-settings-page/professor-settings-page.component.html
@@ -9,7 +9,7 @@
 <div>
     <button mat-raised-button style="margin:5px; background-color: var(--csun-red); color: #FFFFFF;" routerLink="/profMain">
         <mat-label for="saveButton">Save</mat-label>
-        <mat-icon id="saveButton" style="margin: 5px;">save</mat-icon>
+        <mat-icon id="saveButton" style="margin: 5px;">save_alt</mat-icon>
     </button>
     <button mat-raised-button style="margin:5px" routerLink="/profMain">
         <mat-label for="cancelButton">Cancel</mat-label>
