fixes layout issues with window resizing, updates layout components.
updates readme.
adds src/styles folder for global css files.
streamlines components, removes redundancies.
adds navbar title and testing data services.
adds message model.

--- a/src/app/professor-main-page/professor-main-page.component.html
+++ b/src/app/professor-main-page/professor-main-page.component.html
@@ -1,2 +1,8 @@
-<app-nav-bar name="Professor Main"></app-nav-bar>
-<app-card-layout [list]="courseList"></app-card-layout>
+<div>
+    <app-course-card [course]="course"></app-course-card>
+    <app-course-card [course]="course"></app-course-card>
+    <app-course-card [course]="course"></app-course-card>
+    <app-course-card [course]="course"></app-course-card>
+    <app-course-card [course]="course"></app-course-card>
+    <app-course-card [course]="course"></app-course-card>
+</div>
