--- a/src/app/professor-settings-page/professor-settings-page.component.html
+++ b/src/app/professor-settings-page/professor-settings-page.component.html
@@ -1,17 +1,16 @@
-<app-nav-bar name="Professor Settings"></app-nav-bar>
 <mat-accordion>
-    <app-course-expansion-panel tempName="COMP 585" tempSecNum="11423"></app-course-expansion-panel>
-    <app-course-expansion-panel tempName="COMP 429" tempSecNum="11543"></app-course-expansion-panel>
-    <app-course-expansion-panel tempName="COMP 424" tempSecNum="32130"></app-course-expansion-panel>
-    <app-course-expansion-panel tempName="COMP 333" tempSecNum="24123"></app-course-expansion-panel>
+    <app-course-settings [course]="course"></app-course-settings>
+    <app-course-settings [course]="course"></app-course-settings>
+    <app-course-settings [course]="course"></app-course-settings>
+    <app-course-settings [course]="course"></app-course-settings>
 </mat-accordion>
 
 <div>
-    <button mat-raised-button style="margin:5px; background-color: var(--csun-red); color: #FFFFFF;" routerLink="/profMain">
+    <button mat-raised-button class="goldenYellow" style="margin: 10px" routerLink="/profMain">
         <mat-label for="saveButton">Save</mat-label>
         <mat-icon id="saveButton" style="margin: 5px;">save_alt</mat-icon>
     </button>
-    <button mat-raised-button style="margin:5px" routerLink="/profMain">
+    <button mat-raised-button class="csunRed" style="margin: 10px" routerLink="/profMain">
         <mat-label for="cancelButton">Cancel</mat-label>
         <mat-icon id="cancelButton" style="margin: 5px;">cancel</mat-icon>
     </button>
