--- a/src/app/professor-main-page/professor-main-page.component.html
+++ b/src/app/professor-main-page/professor-main-page.component.html
@@ -1,8 +1,2 @@
-<div>
-    <app-course-card [course]="course"></app-course-card>
-    <app-course-card [course]="course"></app-course-card>
-    <app-course-card [course]="course"></app-course-card>
-    <app-course-card [course]="course"></app-course-card>
-    <app-course-card [course]="course"></app-course-card>
-    <app-course-card [course]="course"></app-course-card>
-</div>
+<app-nav-bar name="Professor Main"></app-nav-bar>
+<app-card-layout [list]="courseList"></app-card-layout>
