--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -3,9 +3,9 @@
     background: none;
     border: 0;
     width: min-content;
-    padding: 0;
     color: #FFFFFF;
 }
+
 .menu {
     position: relative;
     display: inline-block;
@@ -13,7 +13,7 @@
 
 h1 {
     font-family: futura-pt, sans-serif;
-    min-width: 25%;
-    font-size: 1em;
-    letter-spacing: 0.2em;
+    font-weight: 700;
+    font-size: 1.5em;
+    letter-spacing: 5px;
 }
