--- a/src/app/professor-messages-page/professor-messages-page.component.html
+++ b/src/app/professor-messages-page/professor-messages-page.component.html
@@ -1,50 +1,26 @@
+<app-nav-bar name="Professor Messages"></app-nav-bar>
 <mat-tab-group>
-    <mat-tab label="COMP 585" >
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
+    <mat-tab label="COMP 424">
+        <app-absent-message></app-absent-message>
+        <app-exam-message></app-exam-message>
+        <app-absent-message></app-absent-message>
+        <app-exam-message></app-exam-message>
+        <app-absent-message></app-absent-message>
+        <app-exam-message></app-exam-message>
+        <app-absent-message></app-absent-message>
+        <app-exam-message></app-exam-message>
     </mat-tab>
-    <mat-tab label="COMP 429" >
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
+    <mat-tab label="COMP 390">
+        <app-absent-message></app-absent-message>
+        <app-absent-message></app-absent-message>
+        <app-absent-message></app-absent-message>
+        <app-absent-message></app-absent-message>
     </mat-tab>
-    <mat-tab label="COMP 490" >
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
+    <mat-tab label="COMP 429">
+        <app-exam-message></app-exam-message>
+        <app-exam-message></app-exam-message>
+        <app-exam-message></app-exam-message>
+        <app-exam-message></app-exam-message>
     </mat-tab>
-    <mat-tab label="COMP 101" >
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
-            <app-message-card [message]="getNewMessage(0)"></app-message-card>
-            <app-message-card [message]="getNewMessage(1)"></app-message-card>
-    </mat-tab>
+    <mat-tab label="COMP 333"><p style="margin: 20px;">No messages here!</p></mat-tab>
 </mat-tab-group>
