--- a/src/app/user-menu/user-menu.component.html
+++ b/src/app/user-menu/user-menu.component.html
@@ -1,8 +1,6 @@
-<button mat-menu-item id="settingsButton" routerLink="/profSettings">
-    <mat-icon class="material-icons blackIcon">settings_application</mat-icon>
-    <mat-label for="settingsButton">Settings</mat-label>
+<button mat-menu-item routerLink="/profSettings">
+    <span>Settings</span>
 </button>
-<button mat-menu-item id="logoutButton" routerLink="/logOut">
-    <mat-icon class="material-icons blackIcon">exit_to_app</mat-icon>
-    <mat-label for="logoutButton">Log Out</mat-label>
+<button mat-menu-item routerLink="/logOut">
+    <span>Log Out</span>
 </button>
