Reorganized labels for code to better organize code

--- a/src/app/professor-course-view-page/professor-course-view-page.component.html
+++ b/src/app/professor-course-view-page/professor-course-view-page.component.html
@@ -1,7 +1,7 @@
-<app-nav-bar></app-nav-bar>
+<app-professor-nav-bar></app-professor-nav-bar>
 <div class="upperPart">
-<app-course-card-view-prof></app-course-card-view-prof>
+<app-professor-course-card-view></app-professor-course-card-view>
 <app-button-code-generator></app-button-code-generator>
 </div>
-<app-student-list></app-student-list>
+<app-professor-student-list></app-professor-student-list>
 <app-button-prof-save-attendance></app-button-prof-save-attendance>
