--- a/src/app/professor-main-page/professor-main-page.component.html
+++ b/src/app/professor-main-page/professor-main-page.component.html
@@ -1,2 +1,2 @@
-<app-nav-bar name="Professor Main"></app-nav-bar>
-<app-card-layout [list]="courseList"></app-card-layout>
+<app-professor-nav-bar name="Professor Main"></app-professor-nav-bar>
+<app-professor-card-layout [list]="courseList"></app-professor-card-layout>
