--- a/src/app/professor-messages-page/professor-messages-page.component.html
+++ b/src/app/professor-messages-page/professor-messages-page.component.html
@@ -1,4 +1,4 @@
-<app-nav-bar name="Professor Messages"></app-nav-bar>
+<app-professor-nav-bar name="Professor Messages"></app-professor-nav-bar>
 <mat-tab-group>
     <mat-tab label="COMP 424">
         <app-absent-message></app-absent-message>
