--- a/src/app/professor-settings-page/professor-settings-page.component.html
+++ b/src/app/professor-settings-page/professor-settings-page.component.html
@@ -1,9 +1,9 @@
-<app-nav-bar name="Professor Settings"></app-nav-bar>
+<app-professor-nav-bar name="Professor Settings"></app-professor-nav-bar>
 <mat-accordion>
-    <app-course-expansion-panel tempName="COMP 585" tempSecNum="11423"></app-course-expansion-panel>
-    <app-course-expansion-panel tempName="COMP 429" tempSecNum="11543"></app-course-expansion-panel>
-    <app-course-expansion-panel tempName="COMP 424" tempSecNum="32130"></app-course-expansion-panel>
-    <app-course-expansion-panel tempName="COMP 333" tempSecNum="24123"></app-course-expansion-panel>
+    <app-professor-course-expansion-panel tempName="COMP 585" tempSecNum="11423"></app-professor-course-expansion-panel>
+    <app-professor-course-expansion-panel tempName="COMP 429" tempSecNum="11543"></app-professor-course-expansion-panel>
+    <app-professor-course-expansion-panel tempName="COMP 424" tempSecNum="32130"></app-professor-course-expansion-panel>
+    <app-professor-course-expansion-panel tempName="COMP 333" tempSecNum="24123"></app-professor-course-expansion-panel>
 </mat-accordion>
 
 <div>
