Added student page components

--- a/src/app/student-main-page/student-main-page.component.html
+++ b/src/app/student-main-page/student-main-page.component.html
@@ -1,2 +1,2 @@
-<app-professor-nav-bar name="Student Main"></app-professor-nav-bar>
-<app-professor-card-layout [list]="courseList"></app-professor-card-layout>
+<app-student-nav-bar name="Student Main"></app-student-nav-bar>
+<app-student-card-layout [list]="courseList"></app-student-card-layout>
