--- a/src/app/student-messages-page/student-messages-page.component.html
+++ b/src/app/student-messages-page/student-messages-page.component.html
@@ -1,4 +1,4 @@
-<app-professor-nav-bar name="Professor Messages"></app-professor-nav-bar>
+<app-student-nav-bar name="Student Messages"></app-student-nav-bar>
 <mat-tab-group>
     <mat-tab label="COMP 424">
         <app-absent-message></app-absent-message>
