Adds card component to student course view with buttons to change NCOD services. Buttons use mailto to generate a new mail in the user's client.

--- a/src/app/student-course-view-card/student-course-view-card.component.html
+++ b/src/app/student-course-view-card/student-course-view-card.component.html
@@ -25,9 +25,7 @@
             <input id="number" placeholder="Code">
         </mat-form-field>
     
-        <button mat-raised-button 
-        class="csunRed"
-        routerLink="/studMain">
+        <button mat-raised-button class="csunRed" routerLink="/studMain">
             <mat-label for="viewCourse">Sign In</mat-label>
         </button>   
     </div>
