Adds the ability to generate prefilled messages. Makes this available to Student to NCOD messages.

--- a/src/app/student-course-view-card/student-course-view-card.component.html
+++ b/src/app/student-course-view-card/student-course-view-card.component.html
@@ -21,9 +21,9 @@
     
     <div align="center">
     
-        <mat-form-field placeholder="Input">
+        <!-- <mat-form-field placeholder="Input">
             <input id="number" placeholder="Code">
-        </mat-form-field>
+        </mat-form-field> -->
     
         <button mat-raised-button class="csunRed" routerLink="/studMain">
             <mat-label for="viewCourse">Sign In</mat-label>
