--- a/src/app/student-course-view-page/student-course-view-page.component.html
+++ b/src/app/student-course-view-page/student-course-view-page.component.html
@@ -15,9 +15,9 @@
             Request, Cancel, or Modify NCOD Services
         </mat-card-subtitle>
         <mat-card-actions>
-            <button mat-button (click)="onClick('ASL')" class="csunRed"><mat-label>ASL</mat-label></button>
-            <button mat-button (click)="onClick('Cart')" class="csunRed">Cart</button>
-            <button mat-button (click)="onClick('Note Taker')" class="csunRed">Note Taker</button>
+            <button mat-button (click)="onClick(0)" class="csunRed"><mat-label>ASL</mat-label></button>
+            <button mat-button (click)="onClick(1)" class="csunRed">Cart</button>
+            <button mat-button (click)="onClick(2)" class="csunRed">Note Taker</button>
     </mat-card-actions>
     </mat-card>
 </mat-accordion>
