Fixes navbar behavior when resizing. Log out button in user menu now directs to login component. Other components may now use the navbar and sets its name as appropriate.

--- a/src/app/professor-course-view-page/professor-course-view-page.component.html
+++ b/src/app/professor-course-view-page/professor-course-view-page.component.html
@@ -1,4 +1,4 @@
-<app-professor-nav-bar></app-professor-nav-bar>
+<app-navbar name="Professor Courses"></app-navbar>
 <div class="upperPart">
 <app-professor-course-card-view></app-professor-course-card-view>
 <app-button-code-generator></app-button-code-generator>
