--- a/src/app/professor-settings-page/professor-settings-page.component.html
+++ b/src/app/professor-settings-page/professor-settings-page.component.html
@@ -1,4 +1,4 @@
-<app-professor-nav-bar name="Professor Settings"></app-professor-nav-bar>
+<app-navbar name="Professor Settings"></app-navbar>
 <mat-accordion>
     <app-professor-course-expansion-panel tempName="COMP 585" tempSecNum="11423"></app-professor-course-expansion-panel>
     <app-professor-course-expansion-panel tempName="COMP 429" tempSecNum="11543"></app-professor-course-expansion-panel>
