--- a/src/app/student-course-view-page/student-course-view-page.component.html
+++ b/src/app/student-course-view-page/student-course-view-page.component.html
@@ -1,4 +1,4 @@
-<app-student-nav-bar name="Student Page"></app-student-nav-bar>
+<app-navbar name="Student Courses"></app-navbar>
 <app-student-course-view-card></app-student-course-view-card>
 <mat-accordion>
     <mat-expansion-panel>
