--- a/src/app/student-settings-page/student-settings-page.component.html
+++ b/src/app/student-settings-page/student-settings-page.component.html
@@ -1,4 +1,4 @@
-<app-student-nav-bar name="Student Settings"></app-student-nav-bar>
+<app-navbar name="Student Settings"></app-navbar>
 <mat-accordion>
     <app-student-course-expansion-panel tempName="COMP 585" tempSecNum="11423"></app-student-course-expansion-panel>
     <app-student-course-expansion-panel tempName="COMP 429" tempSecNum="11543"></app-student-course-expansion-panel>
