Fixes bug where NCOD message buttons show the same content or don't work as expected. Simplifies default-messages.json object.

--- a/src/app/student-course-view-page/student-course-view-page.component.html
+++ b/src/app/student-course-view-page/student-course-view-page.component.html
@@ -16,8 +16,7 @@
         </mat-card-subtitle>
         <mat-card-actions>
             <button mat-button (click)="onClick(0)" class="csunRed"><mat-label>ASL</mat-label></button>
-            <button mat-button (click)="onClick(1)" class="csunRed">Cart</button>
-            <button mat-button (click)="onClick(2)" class="csunRed">Note Taker</button>
+            <button mat-button (click)="onClick(1)" class="csunRed">CART/Typewell</button>
     </mat-card-actions>
     </mat-card>
 </mat-accordion>
