Adds masking for log in page's password field.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,7 +18,7 @@
         <div>
           <mat-form-field>
             <mat-label for="password">Password</mat-label>
-            <input matInput id="password" placeholder="password1" required>
+            <input matInput id="password" placeholder="password1" type="password" required>
           </mat-form-field>
         </div>
       </form>
