Adds username attribute to username field on log in page.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,7 +12,7 @@
         <div>
           <mat-form-field>
             <mat-label for="username">Username</mat-label>
-            <input matInput id="username" placeholder="neverabsent@earthlink.net" required>
+            <input matInput id="username" placeholder="neverabsent@earthlink.net" type="username" required>
           </mat-form-field>
         </div>
         <div>
