--- a/src/app/developer-menu/developer-menu.component.html
+++ b/src/app/developer-menu/developer-menu.component.html
@@ -4,6 +4,6 @@
 <button mat-menu-item routerLink="/studMain">
     <span>Student's main page</span>
 </button>
-<button mat-menu-item routerLink="/studMain">
+<!--<button mat-menu-item routerLink="/studMain">
     <span>NCOD student's page</span>
-</button>
+</button>-->
