--- a/src/app/professor-main-page/professor-main-page.component.html
+++ b/src/app/professor-main-page/professor-main-page.component.html
@@ -1,5 +1,4 @@
-<!-- <app-professor-nav-bar name="Professor Courses"></app-professor-nav-bar> -->
-<app-navbar name="Professor Main"></app-navbar>
+<app-professor-nav-bar name="Professor Courses"></app-professor-nav-bar>
 <div>
   <app-professor-course-card [course]="course"></app-professor-course-card>
   <app-professor-course-card [course]="course"></app-professor-course-card>
