--- a/src/app/student-course-view-page/student-course-view-page.component.html
+++ b/src/app/student-course-view-page/student-course-view-page.component.html
@@ -1,12 +1,6 @@
-<app-navbar name="Student Courses"></app-navbar>
+<app-student-nav-bar name="Student Courses"></app-student-nav-bar>
 <app-student-course-view-card></app-student-course-view-card>
 <mat-accordion>
-    <mat-expansion-panel>
-        <mat-expansion-panel-header class="expansionPanelHeader">
-            <mat-panel-title>Messages</mat-panel-title>
-            <mat-panel-description>See messages.</mat-panel-description>
-        </mat-expansion-panel-header>
-    </mat-expansion-panel>
     <mat-card>
         <mat-card-title>
             NCOD Services
