--- a/src/app/student-main-page/student-main-page.component.html
+++ b/src/app/student-main-page/student-main-page.component.html
@@ -1,4 +1,4 @@
-<app-navbar name="Student Main"></app-navbar>
+<app-student-nav-bar name="Student Main"></app-student-nav-bar>
 <div>
   <app-student-course-card [course]="course"></app-student-course-card>
   <app-student-course-card [course]="course"></app-student-course-card>
