--- a/src/app/student-nav-bar/student-nav-bar.component.css
+++ b/src/app/student-nav-bar/student-nav-bar.component.css
@@ -1,19 +1,19 @@
-.navButton {
-    margin: auto;
-    background: none;
-    border: 0;
-    width: min-content;
-    color: #FFFFFF;
+.studentnavButton {
+  margin: auto;
+  background: none;
+  border: 0;
+  width: min-content;
+  color: #FFFFFF;
 }
 
 .menu {
-    position: relative;
-    display: inline-block;
+  position: relative;
+  display: inline-block;
 }
 
 h1 {
-    font-family: futura-pt, sans-serif;
-    font-weight: 700;
-    font-size: 1.5em;
-    letter-spacing: 5px;
+  font-family: futura-pt, sans-serif;
+  font-weight: 700;
+  font-size: 1.5em;
+  letter-spacing: 5px;
 }
