--- a/src/app/user-menu/user-menu.component.html
+++ b/src/app/user-menu/user-menu.component.html
@@ -1,6 +1,6 @@
 <button mat-menu-item routerLink="/profSettings">
     <span>Settings</span>
 </button>
-<button mat-menu-item routerLink="">
+<button mat-menu-item (click)="authService.SignOut()">
     <span>Log Out</span>
 </button>
